# games

./: .gitignore  README.md
101/Assignment1/Code/: CMakeLists.txt  main.cpp
101/Assignment2/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp
101/Assignment3/Code/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
101/Assignment4/code/: CMakeLists.txt  main.cpp
101/Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
101/Assignment6/Code/: BVH.cpp  Bounds3.hpp  Triangle.hpp
101/Assignment7/Code/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Sphere.hpp  main.cpp
101/pa0/: CMakeLists.txt  main.cpp
104/homework2/: color_grading.frag
104/homework3/: animation_FSM.cpp  character_controller.cpp  pose.cpp
104/homework4/: motor.h  motor_component.cpp
202/homework0/src/loads/: loadOBJ.js
202/homework0/src/materials/: PhongMaterial.js
202/homework0/src/shaders/: InternalShader.js
